# jurisai

./: .gitignore  README.md  pyproject.toml  server.py
frontend/: package.json  vite.config.js
frontend/src/: App.jsx  index.jsx
frontend/src/components/: ClientIntake.jsx  DocumentAnalysis.jsx  LegalQuery.jsx  TaskStatus.jsx
src/jurisai/: __init__.py  api.py  crew.py  main.py
src/jurisai/config/: agents.yaml  tasks.yaml
src/jurisai/tools/: __init__.py  custom_tool.py
